// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageMigrationScheduler is scheduled 1`] = `
<div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_CallbackURL"
    >
      Callback URL
    </label>
    <input
      class="form-control"
      id="formMigrationScheduler_CallbackURL"
      type="text"
      value="https://example.com/callback"
    />
  </div>
  <div
    class="form-group has-feedback has-error"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_Schedule"
    >
      Run migration
    </label>
    <div
      class="form-group"
    >
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            type="radio"
          />
          Now
        </label>
      </div>
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            checked=""
            type="radio"
          />
          Schedule
        </label>
      </div>
    </div>
    <div
      class="rdt"
    >
      <input
        class="form-control"
        type="text"
        value=""
      />
      <div
        class="rdtPicker"
      >
        <div
          class="rdtDays"
        >
          <table>
            <thead>
              <tr>
                <th
                  class="rdtPrev"
                >
                  <span>
                    ‹
                  </span>
                </th>
                <th
                  class="rdtSwitch"
                  colspan="5"
                  data-value="6"
                >
                  July 2019
                </th>
                <th
                  class="rdtNext"
                >
                  <span>
                    ›
                  </span>
                </th>
              </tr>
              <tr>
                <th
                  class="dow"
                >
                  Su
                </th>
                <th
                  class="dow"
                >
                  Mo
                </th>
                <th
                  class="dow"
                >
                  Tu
                </th>
                <th
                  class="dow"
                >
                  We
                </th>
                <th
                  class="dow"
                >
                  Th
                </th>
                <th
                  class="dow"
                >
                  Fr
                </th>
                <th
                  class="dow"
                >
                  Sa
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="rdtDay rdtOld rdtDisabled"
                  data-value="30"
                >
                  30
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="1"
                >
                  1
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="2"
                >
                  2
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="3"
                >
                  3
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="4"
                >
                  4
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="5"
                >
                  5
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="6"
                >
                  6
                </td>
              </tr>
              <tr>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="7"
                >
                  7
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="8"
                >
                  8
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="9"
                >
                  9
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="10"
                >
                  10
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="11"
                >
                  11
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="12"
                >
                  12
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="13"
                >
                  13
                </td>
              </tr>
              <tr>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="14"
                >
                  14
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="15"
                >
                  15
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="16"
                >
                  16
                </td>
                <td
                  class="rdtDay rdtDisabled"
                  data-value="17"
                >
                  17
                </td>
                <td
                  class="rdtDay rdtToday"
                  data-value="18"
                >
                  18
                </td>
                <td
                  class="rdtDay"
                  data-value="19"
                >
                  19
                </td>
                <td
                  class="rdtDay"
                  data-value="20"
                >
                  20
                </td>
              </tr>
              <tr>
                <td
                  class="rdtDay"
                  data-value="21"
                >
                  21
                </td>
                <td
                  class="rdtDay"
                  data-value="22"
                >
                  22
                </td>
                <td
                  class="rdtDay"
                  data-value="23"
                >
                  23
                </td>
                <td
                  class="rdtDay"
                  data-value="24"
                >
                  24
                </td>
                <td
                  class="rdtDay"
                  data-value="25"
                >
                  25
                </td>
                <td
                  class="rdtDay"
                  data-value="26"
                >
                  26
                </td>
                <td
                  class="rdtDay"
                  data-value="27"
                >
                  27
                </td>
              </tr>
              <tr>
                <td
                  class="rdtDay"
                  data-value="28"
                >
                  28
                </td>
                <td
                  class="rdtDay"
                  data-value="29"
                >
                  29
                </td>
                <td
                  class="rdtDay"
                  data-value="30"
                >
                  30
                </td>
                <td
                  class="rdtDay"
                  data-value="31"
                >
                  31
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="1"
                >
                  1
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="2"
                >
                  2
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="3"
                >
                  3
                </td>
              </tr>
              <tr>
                <td
                  class="rdtDay rdtNew"
                  data-value="4"
                >
                  4
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="5"
                >
                  5
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="6"
                >
                  6
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="7"
                >
                  7
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="8"
                >
                  8
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="9"
                >
                  9
                </td>
                <td
                  class="rdtDay rdtNew"
                  data-value="10"
                >
                  10
                </td>
              </tr>
            </tbody>
            <tfoot>
              <tr>
                <td
                  class="rdtTimeToggle"
                  colspan="7"
                >
                  12:00 AM
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
      </div>
    </div>
    <span
      class="form-control-feedback glyphicon glyphicon-remove"
    />
    <span
      class="help-block"
    >
      Select a valid date in the future
    </span>
  </div>
</div>
`;

exports[`PageMigrationScheduler renders callback url 1`] = `
<div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_CallbackURL"
    >
      Callback URL
    </label>
    <input
      class="form-control"
      id="formMigrationScheduler_CallbackURL"
      type="text"
      value="https://example.com/callback"
    />
  </div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_Schedule"
    >
      Run migration
    </label>
    <div
      class="form-group"
    >
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            checked=""
            type="radio"
          />
          Now
        </label>
      </div>
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            type="radio"
          />
          Schedule
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageMigrationScheduler renders error for wrong url 1`] = `
<div>
  <div
    class="form-group has-feedback has-error"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_CallbackURL"
    >
      Callback URL
    </label>
    <input
      class="form-control"
      id="formMigrationScheduler_CallbackURL"
      type="text"
      value="wrong url"
    />
    <span
      class="form-control-feedback glyphicon glyphicon-remove"
    />
    <span
      class="help-block"
    >
      Enter a valid URL
    </span>
  </div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_Schedule"
    >
      Run migration
    </label>
    <div
      class="form-group"
    >
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            checked=""
            type="radio"
          />
          Now
        </label>
      </div>
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            type="radio"
          />
          Schedule
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageMigrationScheduler renders expected components 1`] = `
<div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_CallbackURL"
    >
      Callback URL
    </label>
    <input
      class="form-control"
      id="formMigrationScheduler_CallbackURL"
      type="text"
      value=""
    />
  </div>
  <div
    class="form-group has-feedback"
  >
    <label
      class="control-label"
      for="formMigrationScheduler_Schedule"
    >
      Run migration
    </label>
    <div
      class="form-group"
    >
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            checked=""
            type="radio"
          />
          Now
        </label>
      </div>
      <div
        class="radio"
      >
        <label
          title=""
        >
          <input
            type="radio"
          />
          Schedule
        </label>
      </div>
    </div>
  </div>
</div>
`;
